--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.3",
     "@types/stompjs": "^2.3.7",
@@ -20,12 +25,14 @@
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "uuid": "^9.0.1",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.6",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
