--- a/server/pom.xml
+++ b/server/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>spring-websocket</artifactId>
             <version>5.3.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
     </dependencies>
 
     <build>
